--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 　
     <link rel="manifest" href="manifest.json">
-    <title>PWA Sample</title>
+    <title> Tetris_App</title>
   </head>
 
   <body>
