--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
   </head>
 
   <body>
+
+    <script>
+      if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('service_worker.js').then(function(registration) {
+          console.log('ServiceWorker registration successful with scope: ', registration.scope);
+      }).catch(function(err) {
+          console.log('ServiceWorker registration failed: ', err);
+      });
+      }
+    </script>
     <div class="title-wrap">
       <h1>テトリスで遊ぼう！</h1>
     </div>
